fix styles (scrollbar)

--- a/app/styles.css
+++ b/app/styles.css
@@ -3,6 +3,8 @@ body {
     font-family: Courier, 'Courier New', monospace;
     background: #fff;
     color: #000;
+    padding: 0;
+    margin: 0 1em;
 }
 
 a, a:visited {
@@ -48,6 +50,10 @@ button {
 
 .main-footer {
     text-align: center;
+}
+
+.main-footer > p:first-child {
+    margin-top: 0;
 }
 
 .wrapper textarea {
